--- a/public/css/addProduct.css
+++ b/public/css/addProduct.css
@@ -5,7 +5,7 @@ body {
 }
 
 .container {
-    max-width: 600px;
+    /*max-width: 600px;*/
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
